# MLFlow--Streamlit

./: .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yaml  pyproject.toml
utils/: graphs.py  mlfow_helpers.py
