[project]
name = "megh-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas==2.3.3",
    "plotly==6.7.0",
    "psycopg2-binary",
    "sqlalchemy==2.0.46",
    "scikit-learn==1.8.0",
    "matplotlib==3.10.8",
    "mlflow==3.8.1",
    "shap==0.51.0",
    "streamlit==1.56.0"
]